# benchmetrics

./: README.md  benchmark.py  dashboard.py  example.py  metrics_collector.py  metrics_log.jsonl  pyproject.toml  requirements.txt
examples/: example.py
src/benchmark_py/: metrics_collector.py
src/benchmetrics/: __init__.py  benchmark.py  dashboard.py  metrics_collector.py
