[project]
name = "benchmark-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "dash>=2.15.0",
    "numpy>=1.21.6",
    "plotly>=5.18.0",
    "psutil>=7.0.0",
    "pynvml>=11.5.3",
    "pyqt6>=6.6.1",
    "pywin32>=308",
    "torch>=1.13.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
