[project]
name = "benchmetrics"
version = "0.1.0"
description = "A lightweight and non-blocking Python library for real-time system benchmarking, providing CPU, GPU, RAM, and Swap monitoring with an interactive dashboard."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.6",
    "psutil>=7.0.0",
    "pynvml>=11.5.3",
]

[project.optional-dependencies]
example = [
    "dash>=2.15.0",
    "plotly>=5.18.0",
    "plotly-resampler>=0.10.0",
    "pyqt6>=6.6.1",
    "pywin32>=308; sys_platform == 'win32'",
    "torch>=1.13.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
